--- a/index.html
+++ b/index.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt/br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Agrinho</title>
+    <!-- pipoporopo popoporopo pipopoporopo popoporopo -->
 </head>
+<header>
+<h1>Gastronomia como Símbolo de Conexão </h1>
+<h4>O Sabor do Campo na Cidade</h4>
+</header>
 <body>
-    
+
+<section class="apresentacao" id="ggg">
+    <div>
+<h2>COMIDAS TRADICIONAIS DO CAMPO</h2>
+<p><strong>Entrevero de Pinhão:</strong></p>
+<p>Prato típico do Paraná, feito com pinhão, carne, farinha de mandioca e outros ingredientes.</p>
+<img class="imagem" src="Pinhao.png" alt="Entrevero de Pinhão">
+</div>
+<div>
+<p><strong>Vaca Atolada:</strong></p>
+<p>Prato mineiro, feito com carne, mandioca e outros ingredientes, cozidos juntos em fogo baixo.</p>
+<img class="imagem-1" src="Vaca Atolada.png" alt="Vaca Atolada">
+</div>
+<div>
+<p><strong>Pamonha:</strong></p>
+<p>Prato feito com milho, açúcar e outros ingredientes, cozido em folhas de bananeira. </p>
+<img class="imagem-2" src="Pamonha.png" alt="Pamonha">
+</div>
+</section>
+
+<section class="colaterais">
+    <div>
+    <h2>COLATERAIS</h2>
+        <p>O uso indiscriminado dos anabolizantes traz distúrbios da função do fígado, potencial surgimento de tumores,</p>
+        <p>infertilidade, maior risco de trombose, alteração do colesterol e possibilidade de adoecimento cardiovascular </p>
+        <p>com o aumento da pressão arterial e risco aumentado de infarto cardíaco.</p>
+    </div>
+    <img class="efeitos-colaterais" src="/image 5.png" alt="efeitos-colaterais">
+</section>
+
+<section id="equipe">
+    <div class="vendedores">
+        <h2>VENDEDORES</h2>
+    </div>
+    <div class="divisao-equipe">
+        <img class="foto-equipe" src="Thiago.png" alt="do blablabla">
+        <h3> THIAGO </h3>
+    </div>
+
+    <div class="divisao-equipe">
+        <img class="foto-equipe" src="Samuel.png" alt="da blablabla2">
+        <h3> SAMUEL </h3>
+    </div>
+</section>
+<footer>
+ <p>Estamos localizados na Rua Coronel Manoel Teixeira, 91 - Xique Xique/BA</p>
+ <p>Entre em contato pelo número (74)99856-6921</p>
+ <p>Nos siga nas redes sociais: <a href="https://www.cep.pr.gov.br/">Site do CEPão</a></p>
+
+</footer>
+
+
+
 </body>
 </html>
