--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <img class="imagem" src="Pinhao.png" alt="Entrevero de Pinhão">
 <p><strong>Vaca Atolada:</strong></p>
 <p>Prato mineiro, feito com carne, mandioca e outros ingredientes, cozidos juntos em fogo baixo.</p>
-<img class="imagem-1" src="Vaca Atolada.png" alt="Vaca Atolada">
+<img class="imagem" src="Vaca Atolada.png" alt="Vaca Atolada">
 <p><strong>Pamonha:</strong></p>
 <p>Prato feito com milho, açúcar e outros ingredientes, cozido em folhas de bananeira. </p>
-<img class="imagem-2" src="Pamonha.png" alt="Pamonha">
+<img class="imagem" src="Pamonha.png" alt="Pamonha">
 </div>
 </section>
 
