--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 </div>
 </section>
 
-<section class="colaterais">
+<section class="beneficios">
     <div>
-    <h2>COLATERAIS</h2>
-        <p>O uso indiscriminado dos anabolizantes traz distúrbios da função do fígado, potencial surgimento de tumores,</p>
-        <p>infertilidade, maior risco de trombose, alteração do colesterol e possibilidade de adoecimento cardiovascular </p>
-        <p>com o aumento da pressão arterial e risco aumentado de infarto cardíaco.</p>
+    <h2>BENEFÍCIOS</h2>
+        <p>A produção de alimentos tradicionais do campo traz diversos benefícios para a cidade, incluindo a garantia de alimentos</p>
+        <p>frescos e nutritivos, a redução do impacto ambiental da produção industrial, o fortalecimento da cultura local e o apoio à economia</p>
+        <p>de pequenas comunidades. Além disso, a proximidade com a produção rural permite um melhor controle da qualidade dos alimentos e uma maior variedade de produtos.</p>
     </div>
-    <img class="efeitos-colaterais" src="/image 5.png" alt="efeitos-colaterais">
+    <img class="comidas rurais" src="Comidas Rurais.png" alt="Comidas Rurais">
 </section>
 
 <section id="equipe">
