--- a/index.html
+++ b/index.html
@@ -38,23 +38,9 @@
         <p>frescos e nutritivos, a redução do impacto ambiental da produção industrial, o fortalecimento da cultura local e o apoio à economia</p>
         <p>de pequenas comunidades. Além disso, a proximidade com a produção rural permite um melhor controle da qualidade dos alimentos e uma maior variedade de produtos.</p>
     </div>
-    <img class="comidas rurais" src="Comidas Rurais.png" alt="Comidas Rurais">
+    <img class="comidas-rurais" src="Comidas Rurais.png" alt="Comidas Rurais">
 </section>
 
-<section id="equipe">
-    <div class="vendedores">
-        <h2>VENDEDORES</h2>
-    </div>
-    <div class="divisao-equipe">
-        <img class="foto-equipe" src="Thiago.png" alt="do blablabla">
-        <h3> THIAGO </h3>
-    </div>
-
-    <div class="divisao-equipe">
-        <img class="foto-equipe" src="Samuel.png" alt="da blablabla2">
-        <h3> SAMUEL </h3>
-    </div>
-</section>
 <footer>
  <p>Estamos localizados na Rua Coronel Manoel Teixeira, 91 - Xique Xique/BA</p>
  <p>Entre em contato pelo número (74)99856-6921</p>
