--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <title>Agrinho</title>
     <!-- pipoporopo popoporopo pipopoporopo popoporopo -->
 </head>
-<header>
-<h1>Gastronomia como Símbolo de Conexão </h1>
-<h4>O Sabor do Campo na Cidade</h4>
-</header>
-<body>
 
+<header>
+<h1>Gastronomia como Símbolo de Conexão: O Sabor do Campo na Cidade </h1>
+</header>
+
+<body>
 <section class="apresentacao" id="ggg">
     <div>
 <h2>COMIDAS TRADICIONAIS DO CAMPO</h2>
