--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
 </section>
 
 <footer>
- <p>Estamos localizados na Rua Coronel Manoel Teixeira, 91 - Xique Xique/BA</p>
- <p>Entre em contato pelo número (74)99856-6921</p>
- <p>Nos siga nas redes sociais: <a href="https://www.cep.pr.gov.br/">Site do CEPão</a></p>
+ <p>A gastronomia é a ponte que une o sabor autêntico do campo ao pulsar vibrante da cidade,</p>
+ <p>transformando cada prato em uma celebração de raízes e encontros culturais.</p>
 
 </footer>
 
