--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
 </section>
 
 <footer>
- <p>A gastronomia é a ponte que une o sabor autêntico do campo ao pulsar vibrante da cidade,</p>
- <p>transformando cada prato em uma celebração de raízes e encontros culturais.</p>
-
+ <p>A gastronomia é a ponte que une o sabor autêntico do campo ao pulsar vibrante da cidade, transformando cada prato em uma celebração de raízes e encontros culturais.</p>
 </footer>
 
 
