--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </section>
 
 <footer>
- <p>A gastronomia é a ponte que une o sabor autêntico do campo ao pulsar vibrante da cidade, transformando cada prato em uma celebração de raízes e encontros culturais.</p>
+ <h3>A gastronomia é a ponte que une o sabor autêntico do campo ao pulsar vibrante da cidade, transformando cada prato em uma celebração de raízes e encontros culturais.</h3>
 </footer>
 
 
