--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 <p>Prato feito com milho, açúcar e outros ingredientes, cozido em folhas de bananeira. </p>
 <img class="imagem" src="Pamonha.png" alt="Pamonha">
 </div>
+<div class="gif">
+    <img class="hamert" src="gif.gif" alt="gif">
+</div>
 </section>
 
 <section class="beneficios">
