--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agrinho</title>
-    <!-- pipoporopo popoporopo pipopoporopo popoporopo -->
 </head>
 
 <header>
@@ -17,17 +16,22 @@
 
 <body>
 <section class="apresentacao" id="ggg">
-    <div>
 <h2>COMIDAS TRADICIONAIS DO CAMPO</h2>
-<p><strong>Entrevero de Pinhão:</strong></p>
-<p>Prato típico do Paraná, feito com pinhão, carne, farinha de mandioca e outros ingredientes.</p>
-<img class="imagem" src="Pinhao.png" alt="Entrevero de Pinhão">
-<p><strong>Vaca Atolada:</strong></p>
-<p>Prato mineiro, feito com carne, mandioca e outros ingredientes, cozidos juntos em fogo baixo.</p>
-<img class="imagem" src="Vaca Atolada.png" alt="Vaca Atolada">
-<p><strong>Pamonha:</strong></p>
-<p>Prato feito com milho, açúcar e outros ingredientes, cozido em folhas de bananeira. </p>
-<img class="imagem" src="Pamonha.png" alt="Pamonha">
+    <p><strong>Entrevero de Pinhão:</strong></p>
+    <p>Prato típico do Paraná, feito com pinhão, carne, farinha de mandioca e outros ingredientes.</p>
+<div>
+    <img class="imagem" src="Pinhao.png" alt="Entrevero de Pinhão">
+</div>
+    <p><strong>Vaca Atolada:</strong></p>
+    <p>Prato mineiro, feito com carne, mandioca e outros ingredientes, cozidos juntos em fogo baixo.</p>
+<div>
+    <img class="imagem" src="Vaca Atolada.png" alt="Vaca Atolada">
+</div>
+    <p><strong>Pamonha:</strong></p>
+    <p>Prato feito com milho, açúcar e outros ingredientes, cozido em folhas de bananeira. </p>
+<div>
+    <img class="imagem" src="Pamonha.png" alt="Pamonha">
+</div>
 </div>
 <div class="gif">
     <img class="hamert" src="gif.gif" alt="gif">
