--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     <h2>COMIDAS TRADICIONAIS DO CAMPO</h2>
     <p><strong>Entrevero de Pinhão:</strong></p>
     <p>Prato típico do Paraná, feito com pinhão, carne, farinha de mandioca e outros ingredientes.</p>
-<div>
+<div class="pinhao">
     <img class="imagem" src="Pinhao.png" alt="Entrevero de Pinhão">
 </div>
     <p><strong>Vaca Atolada:</strong></p>
     <p>Prato mineiro, feito com carne, mandioca e outros ingredientes, cozidos juntos em fogo baixo.</p>
-<div>
+<div class="vaca">
     <img class="imagem" src="Vaca Atolada.png" alt="Vaca Atolada">
 </div>
     <p><strong>Pamonha:</strong></p>
     <p>Prato feito com milho, açúcar e outros ingredientes, cozido em folhas de bananeira. </p>
-<div>
+<div class="pamonha">
     <img class="imagem" src="Pamonha.png" alt="Pamonha">
 </div>
 </div>
