--- a/index.html
+++ b/index.html
@@ -20,17 +20,50 @@
     <p><strong>Entrevero de Pinhão:</strong></p>
     <p>Prato típico do Paraná, feito com pinhão, carne, farinha de mandioca e outros ingredientes.</p>
 <div class="pinhao">
+
     <img class="imagem" src="Pinhao.png" alt="Entrevero de Pinhão">
+    <p class="origem">O entrevero de pinhão é um prato típico da culinária do sul do Brasil, especialmente no Rio Grande do Sul, Santa Catarina e Paraná. Sua origem está ligada à cultura gaúcha e ao modo de vida dos povos indígenas e dos colonizadores europeus, principalmente os açorianos, que chegaram ao Brasil no século XVIII.
+
+O prato tem como base o pinhão, a semente da araucária, árvore típica da região sul do Brasil, que é consumida em diversas preparações. O entrevero, em si, é uma mistura de carnes, como carne de gado, linguiça, frango e até carne de porco, que são cozidas junto com o pinhão e outros ingredientes como arroz, alho, cebola, cenoura e temperos.
+
+A tradição do entrevero está muito associada ao modo de vida rural e à convivência com a natureza. O prato era preparado em grandes panelas, principalmente durante as festas tradicionais, celebrações e encontros familiares no campo. Essa união de ingredientes simples e saborosos reflete a simplicidade e a hospitalidade da culinária gaúcha.
+
+Além disso, o entrevero de pinhão também está ligado às festividades de inverno, quando o pinhão, um dos alimentos mais abundantes na estação, é colhido e utilizado de várias formas nas refeições. A cultura do entrevero continua a ser transmitida de geração em geração, preservando as raízes da gastronomia tradicional da região sul do Brasil.
+
+É um prato que também simboliza a identidade cultural do sul do Brasil, com uma forte conexão ao campo e à vida no interior.</p>
+
 </div>
     <p><strong>Vaca Atolada:</strong></p>
     <p>Prato mineiro, feito com carne, mandioca e outros ingredientes, cozidos juntos em fogo baixo.</p>
 <div class="vaca">
+
     <img class="imagem" src="Vaca Atolada.png" alt="Vaca Atolada">
+     <p class="origem">A vaca atolada é um prato tradicional da culinária brasileira, especialmente popular no Rio de Janeiro, Minas Gerais e outras regiões do Sudeste e Centro-Oeste. Sua origem remonta à culinária caipira e está ligada ao modo de vida rural das regiões interioranas, onde o uso de carnes e ingredientes simples e saborosos era comum.
+
+A vaca atolada é um prato robusto e substancial, que tem como base carne de boi (geralmente músculo ou costela), cozida lentamente até ficar bem macia. O prato é acompanhado de mandioca (ou aipim), que, quando cozida junto à carne, se desmancha e forma um caldo espesso, criando a "atolada", ou seja, a mandioca "atola" na carne, dando o nome ao prato.
+
+A origem do prato está diretamente relacionada à culinária dos tropeiros e aos trabalhadores do campo, que precisavam de pratos substanciais para alimentar o corpo após longas jornadas de trabalho. A combinação da carne com a mandioca é característica da comida rural brasileira, aproveitando ingredientes locais e acessíveis, como a mandioca, um alimento básico da dieta dos povos indígenas e um dos principais cultivados no Brasil.
+
+Com o tempo, a vaca atolada se popularizou em várias regiões do Brasil, sendo adaptada em diferentes versões, com variações no tempero e nos acompanhamentos. O prato representa bem a cultura do interior do Brasil, caracterizada pela simplicidade, rusticidade e sabor marcante.
+
+Em resumo, a vaca atolada é um prato que carrega a herança da culinária rural brasileira, utilizando ingredientes típicos da região e promovendo a ideia de uma alimentação farta e acolhedora.</p>
+
 </div>
     <p><strong>Pamonha:</strong></p>
     <p>Prato feito com milho, açúcar e outros ingredientes, cozido em folhas de bananeira. </p>
 <div class="pamonha">
+
     <img class="imagem" src="Pamonha.png" alt="Pamonha">
+   <p class="origem">A pamonha é um prato tradicional da culinária brasileira, especialmente popular no interior de várias regiões, como o Centro-Oeste, Sudeste, Norte e Nordeste do Brasil. Sua origem remonta às culturas indígenas que habitavam o Brasil antes da chegada dos colonizadores europeus.
+
+A pamonha tem como base o milho verde, um ingrediente essencial na dieta dos povos indígenas, que já utilizavam o milho de diversas formas, tanto cozido quanto em forma de farinha, para preparar alimentos como a pamonha. Durante o período colonial, com a introdução de técnicas de preparo pelos portugueses e outros povos, a pamonha passou a ser feita de forma semelhante à que conhecemos hoje: o milho é ralado ou batido, misturado com açúcar ou sal (dependendo da versão) e, em seguida, envolto nas próprias folhas de milho para ser cozido.
+
+O nome "pamonha" provavelmente tem origem na palavra indígena "pamonha", que era usada para designar alimentos preparados com milho. Em algumas regiões, esse nome também pode ser relacionado ao termo "pamonheiro", que é o recipiente tradicional usado para cozinhar as pamonhas.
+
+A pamonha era, originalmente, uma comida simples e de fácil preparo, muito consumida em festas e celebrações no campo, como as festa juninas. Ela era uma forma prática de aproveitar o milho da safra, aproveitando tanto o grão quanto a folha. Com o tempo, a pamonha foi ganhando variações, e hoje é encontrada em diversas versões, tanto doces quanto salgadas, dependendo da região. Pode ser recheada com queijo, carne, frango, leite condensado, entre outros ingredientes.
+
+Portanto, a origem da pamonha está profundamente ligada à cultura indígena e ao uso do milho como base alimentar, sendo um prato que representa a simplicidade e a rusticidade da comida rural brasileira, com forte presença nas festas tradicionais e no cotidiano das famílias do interior.</p>
+
 </div>
 </div>
 <div class="gif">
