--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>COMIDAS TRADICIONAIS DO CAMPO</h2>
     <p><strong>Entrevero de Pinhão:</strong></p>
     <p>Prato típico do Paraná, feito com pinhão, carne, farinha de mandioca e outros ingredientes.</p>
-<div class="pinhao">
+<div class="papa">
 
     <img class="imagem" src="Pinhao.png" alt="Entrevero de Pinhão">
     <p class="origem">O entrevero de pinhão é um prato típico da culinária do sul do Brasil, especialmente no Rio Grande do Sul, Santa Catarina e Paraná. Sua origem está ligada à cultura gaúcha e ao modo de vida dos povos indígenas e dos colonizadores europeus, principalmente os açorianos, que chegaram ao Brasil no século XVIII.
@@ -35,7 +35,7 @@ Além disso, o entrevero de pinhão também está ligado às festividades de inv
 </div>
     <p><strong>Vaca Atolada:</strong></p>
     <p>Prato mineiro, feito com carne, mandioca e outros ingredientes, cozidos juntos em fogo baixo.</p>
-<div class="vaca">
+<div class="papa">
 
     <img class="imagem" src="Vaca Atolada.png" alt="Vaca Atolada">
      <p class="origem">A vaca atolada é um prato tradicional da culinária brasileira, especialmente popular no Rio de Janeiro, Minas Gerais e outras regiões do Sudeste e Centro-Oeste. Sua origem remonta à culinária caipira e está ligada ao modo de vida rural das regiões interioranas, onde o uso de carnes e ingredientes simples e saborosos era comum.
@@ -51,7 +51,7 @@ Em resumo, a vaca atolada é um prato que carrega a herança da culinária rural
 </div>
     <p><strong>Pamonha:</strong></p>
     <p>Prato feito com milho, açúcar e outros ingredientes, cozido em folhas de bananeira. </p>
-<div class="pamonha">
+<div class="papa">
 
     <img class="imagem" src="Pamonha.png" alt="Pamonha">
    <p class="origem">A pamonha é um prato tradicional da culinária brasileira, especialmente popular no interior de várias regiões, como o Centro-Oeste, Sudeste, Norte e Nordeste do Brasil. Sua origem remonta às culturas indígenas que habitavam o Brasil antes da chegada dos colonizadores europeus.
