--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Portanto, a origem da pamonha está profundamente ligada à cultura indígena e 
 </div>
 <div class="gif">
     <img class="hamert" src="gif.gif" alt="gif">
-    <p class="origem"></p>
+    <p class="origem">Hamert papando</p>
 </div>
 </section>
 
