--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <header>
-     <h1><strong>Gastronomia como Símbolo de Conexão: O Sabor do Campo na Cidade</strong></h1>
+     <h1 class="titulo"><strong>Gastronomia como Símbolo de Conexão: O Sabor do Campo na Cidade</strong></h1>
 </header>
 
 <body>
