--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Portanto, a origem da pamonha está profundamente ligada à cultura indígena e 
 </section>
 
 <footer>
-     <h3>A gastronomia é a ponte que une o sabor autêntico do campo ao pulsar vibrante da cidade, transformando cada prato em uma celebração de raízes e encontros culturais.</h3>
+     <h3 class="titulo">A gastronomia é a ponte que une o sabor autêntico do campo ao pulsar vibrante da cidade, transformando cada prato em uma celebração de raízes e encontros culturais.</h3>
 </footer>
 
 
