--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 </header>
 
 <body>
-<section class="apresentacao" id="ggg">
+    <section class="frase">
+    <h2>Mais do que alimentar o corpo, a comida tem o poder de alimentar histórias, afetos e culturas. Quando o sabor 
+    do campo chega à cidade, ele não traz apenas ingredientes, mas tradições inteiras embaladas em cada receita</h2>
+
+    </section>
+
+    <section class="apresentacao" id="ggg">
     <h2>COMIDAS TRADICIONAIS DO CAMPO</h2>
     <p><strong>Entrevero de Pinhão:</strong></p>
     <p>Prato típico do Paraná, feito com pinhão, carne, farinha de mandioca e outros ingredientes.</p>
