--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <section class="frase">
-    <h3 class="frasinha">Mais do que alimentar o corpo, a comida tem o poder de alimentar histórias, afetos e culturas. Quando o sabor 
+    <h3>Mais do que alimentar o corpo, a comida tem o poder de alimentar histórias, afetos e culturas. Quando o sabor 
     do campo chega à cidade, ele não traz apenas ingredientes, mas tradições inteiras embaladas em cada receita</h3>
 
     </section>
