--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Portanto, a origem da pamonha está profundamente ligada à cultura indígena e 
         São heróis invisíveis da gastronomia, que merecem respeito e visibilidade.</p>
     </div>
 
-    <img src="produtores.png" alt="produtores">
+    <img class="prod" src="produtores.png" alt="produtores">
 
 </section>
 
