--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@ Portanto, a origem da pamonha está profundamente ligada à cultura indígena e 
 
         <h2>BENEFÍCIOS</h2>
         <p>A produção de alimentos tradicionais do campo traz diversos benefícios para a cidade, incluindo a garantia de alimentos frescos e nutritivos, a redução do impacto 
-        ambiental da produção industrial, o fortalecimento da cultura local e o apoio à economia de pequenas comunidades. Além disso, a proximidade com a produção rural 
+        ambiental da produção industrial,</p>
+        <p>o fortalecimento da cultura local e o apoio à economia de pequenas comunidades. Além disso, a proximidade com a produção rural 
         permite um melhor controle da qualidade dos alimentos e uma maior variedade de produtos.</p>
 
 </div>
