--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Portanto, a origem da pamonha está profundamente ligada à cultura indígena e 
     
 </div>
 
-    <p class="origem">Hamert papando</p>
+    <p class="origin">Hamert papando</p>
 
 </section>
 
