--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Portanto, a origem da pamonha está profundamente ligada à cultura indígena e 
     
 </div>
 
-    <p class="origin"><strong>Hamert papando</strong></p>
+    <h3 class="origin"><strong>Hamert papando</strong></h3>
 
 </section>
 
