--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 </section>
 
-<section class="apresentacao" id="ggg">
+<section class="apresentacao">
     
         <h2>COMIDAS TRADICIONAIS DO CAMPO</h2>
     <p><u><strong>Entrevero de Pinhão:</u></strong></p>
