--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ Portanto, a origem da pamonha está profundamente ligada à cultura indígena e 
 </div>
 
     <img class="prod" src="produtores.png" alt="produtores">
+    <img class="prod" src="familia.png" alt="familia de produtores">
 
 </section>
 
