--- a/index.html
+++ b/index.html
@@ -163,8 +163,12 @@ Portanto, a origem da pamonha está profundamente ligada à cultura indígena e 
     
 </div>
 
+<div>
+
     <img class="prod" src="produtores.png" alt="produtores">
     <img class="prod" src="familia.png" alt="familia de produtores">
+
+</div>
 
 </section>
 
