--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Portanto, a origem da pamonha está profundamente ligada à cultura indígena e 
     
 </div>
 
-<div>
+<div class="produtor">
 
     <img class="prod" src="produtores.png" alt="produtores">
     <img class="prod" src="familia.png" alt="familia de produtores">
