--- a/index.html
+++ b/index.html
@@ -138,9 +138,13 @@ Portanto, a origem da pamonha está profundamente ligada à cultura indígena e 
 
 <section class="dia">
     <div>
-        <h2> </h2>
-            <p></p>
-        
+        <h2><strong>O USO NO DIA A DIA</strong></h2>
+            <p>
+                O uso de alimentos como estes no dia a dia é muito comum, principlamente pensando no principal prato de almoço em um família brasileira, sendo ele arroz, feijão, carne, ovo e salada. Todos esses alimentos vêm 
+               de origem rural, o arroz e o feijão são grãos vindos de plantio, a carne vem do abate do boi, o ovo vem da galinha e a salada pode ser de diversos meios, como por exemplo o alface que é uma verdura, mais 
+               especificamente uma hortalicia, o tomate é um fruto de fácil plantio, a cenoura é um legume terroso, mais especificamente uma raiz e a abóbora, que tem um plantio direto na terra por meio de sementes, sendo mais 
+               complicado de se plantar.
+            </p>
     </div>
 </section>
 
