--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Portanto, a origem da pamonha está profundamente ligada à cultura indígena e 
 
 </section>
 
-<section class="dia">
+<section class="beneficios">
     <div>
         <h2><strong>O USO NO DIA A DIA</strong></h2>
             <p>
