--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ Portanto, a origem da pamonha está profundamente ligada à cultura indígena e 
                especificamente uma hortalicia, o tomate é um fruto de fácil plantio, a cenoura é um legume terroso, mais especificamente uma raiz e a abóbora, que tem um plantio direto na terra por meio de sementes, sendo mais 
                complicado de se plantar.
             </p>
+            <img class="imagem" src="prato.png" alt="prato típico brasileiro">
     </div>
 </section>
 
