--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Portanto, a origem da pamonha está profundamente ligada à cultura indígena e 
             </p>
             </div>
             <div>
-            <img class="imagem" src="prato.png" alt="prato típico brasileiro">
+            <img class="dia" src="prato.png" alt="prato típico brasileiro">
     </div>
 </section>
 
