--- a/index.html
+++ b/index.html
@@ -156,10 +156,7 @@ Portanto, a origem da pamonha está profundamente ligada à cultura indígena e 
     <div>
     
         <h2>VALORIZAÇÃO DOS PRODUTORES LOCAIS</h2>
-        <h3><strong>Por que valorizá-los?</strong><h3>
-        
-<br>
-
+        <h3>Por que valorizá-los?<h3>
         <p>Valorizar os produtores locais é essencial porque são eles que cultivam os ingredientes que dão vida à nossa gastronomia. Do leite fresco à farinha de mandioca, dos legumes da 
         horta ao queijo artesanal, tudo começa com o trabalho dedicado de homens e mulheres do campo. Quando esses alimentos chegam às mesas da cidade, eles carregam muito mais que sabor: carregam a história, 
         o esforço e a cultura de quem os produziu. Valorizar é reconhecer que a boa comida urbana nasce na simplicidade do interior.</p>
